--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.0",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.5.5",
+    "sass-text-stroke": "^1.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
