--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
+          "allowedCommonJsDependencies": [
+            "lodash"
+          ],
           "options": {
             "outputPath": "dist/rps-node14",
             "index": "src/index.html",
